[package]
name = "convert"
version = "1.0.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/cyware/convert"
authors = ["KhulnaSoft DevSec <security@khulnasoft.com>", "Cyware <info@khulnasoft.com>"]
readme = "README.md"
description = """
WASM bindings for cyware/convert crate
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
cyware-convert = { path = "../cyware-convert" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.69"

[profile.release]
lto = true
opt-level = 's'
